<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MVC(Model-View-Controller)</string>

    <string name="desc_button_edit">Movie edit</string>
    <string name="desc_button_delete">Movie delete </string>

    <string name="label_edit">Edit %s</string>
    <string name="label_movie_title">Movie Title</string>
    <string name="label_movie_description">Movie Description</string>
    <string name="label_rating_movie">Movie rating</string>
    <string name="label_insert_in_base">Insert in database</string>

    <string name="menu_create_list">Create List</string>
    <string name="menu_clean_database">Clear the database</string>
    <string name="menu_reset_app">Reset App</string>

    <string name="msg_error_get_data">Error fetching data</string>
    <string name="msg_field_empty">Fields are empty</string>
    <string name="msg_loading">Loading data…</string>
    <string name="msg_error_delete">Error deleting</string>
    <string name="msg_error_edit">Error while editing</string>
    <string name="msg_error_insert">Error inserting</string>
    <string name="msg_database_empty">Empty database</string>
    <string name="msg_error_clean_database">Error while clearing the database</string>

</resources>