<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_movie_title"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editDesc"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="top"
        android:hint="@string/label_movie_description"
        android:inputType="text|textMultiLine"
        android:lines="4"
        android:longClickable="false"
        android:maxLength="80"
        android:maxLines="4"
        android:scrollbars="none"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/label_rating_movie" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_insert_in_base" />

</LinearLayout>