<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="SmallSp"
        tools:text="@string/app_name" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:rating="5"
        app:layout_constraintStart_toStartOf="@+id/desc"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:contentDescription="@string/desc_button_edit"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.481" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/desc_button_delete"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/editButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editButton"
        app:layout_constraintTop_toTopOf="@+id/editButton" />

</androidx.constraintlayout.widget.ConstraintLayout>